Upload da Aula de 2022 07 14

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,19 @@ aulas/data/tb_censo.csv
 aulas/data/tb_elecindia_corrig.csv
 aulas/data/tb_oscsp.json
 aulas/data/Tabela Crypto.xlsx
+aulas/data/dados_censo/.Basico_BA.csv.icloud
+aulas/data/dados_censo/.Basico_MG.csv.icloud
+aulas/data/dados_censo/.Basico_RJ.csv.icloud
+aulas/data/dados_censo/.Basico_SP1.csv.icloud
+aulas/data/dados_censo/.Basico_SP2.csv.icloud
+aulas/data/dados_censo/Basico_BA.csv
+aulas/data/dados_censo/Basico_MG.csv
+aulas/data/dados_censo/Basico_RJ.csv
+aulas/data/dados_censo/Basico_SP1.csv
+aulas/data/dados_censo/Basico_SP2.csv
+aulas/data/dados_censo/Basico_BA.csv
+aulas/data/dados_censo/Basico_MG.csv
+aulas/data/dados_censo/Basico_RJ.csv
+aulas/data/dados_censo/Basico_SP1.csv
+aulas/data/dados_censo/Basico_SP2.csv
+*.icloud
